--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -1,9 +1,15 @@
 .container
 
+  .jumbotron
+    h1 Messenger Platform
+    p Easily integrate Facebook's Messenger Platform with your rails app
+
   .row
 
-    .col-md-6
-      .fb-send-to-messenger messenger_app_id="#{ENV['FACEBOOK_APP_ID']}" page_id="#{ENV['FACEBOOK_PAGE_ID']}" data-ref="PASS_THROUGH_PARAM" color="blue" size="large"
+    .col-md-6 = send_to_messenger(size: 'xlarge')
 
-    .col-md-6
-      .fb-messengermessageus messenger_app_id="#{ENV['FACEBOOK_APP_ID']}"  page_id="#{ENV['FACEBOOK_PAGE_ID']}" color="blue" size="large" 
+    .col-md-6 = message_us(size: 'xlarge', color: 'white')
+
+  ul
+    li Set welcome screeen
+    li Clear welcome screeen
